// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display custom seperator  1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
    class="css-fzcsno"
    data-chakra-component="CBreadcrumb"
  >
    <ol
      class="css-fzcsno"
      data-chakra-component="CBox"
    >
      <li
        class="css-juzgwo"
        data-chakra-component="CBreadcrumbItem"
      >
        <a
          class="css-fzcsno css-1v8ez2b"
          data-chakra-component="CBreadcrumbLink"
          href="/"
        >
          Home
        </a>
        <span
          class="css-1d9u6m1"
          data-chakra-component="CBreadcrumbSeparator"
          role="presentation"
        >
          -
        </span>
      </li>
      <li
        class="css-juzgwo"
        data-chakra-component="CBreadcrumbItem"
      >
        <a
          class="css-fzcsno css-1v8ez2b"
          data-chakra-component="CBreadcrumbLink"
          href="/about"
        >
          About
        </a>
        <span
          class="css-1d9u6m1"
          data-chakra-component="CBreadcrumbSeparator"
          role="presentation"
        >
          -
        </span>
      </li>
      <li
        class="css-juzgwo"
        data-chakra-component="CBreadcrumbItem"
      >
        <span
          aria-current="page"
          class="css-fzcsno"
          data-chakra-component="CBreadcrumbLink"
          href="/contact"
        >
          Contact
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div>
    <nav
      aria-label="breadcrumb"
      class="css-fzcsno"
      data-chakra-component="CBreadcrumb"
    >
      <ol
        class="css-fzcsno"
        data-chakra-component="CBox"
      >
        <li
          class="css-juzgwo"
          data-chakra-component="CBreadcrumbItem"
        >
          <a
            class="css-fzcsno css-1v8ez2b"
            data-chakra-component="CBreadcrumbLink"
            href="#"
          >
            Breadcrumb 1
          </a>
          <span
            class="css-s9unhl"
            data-chakra-component="CBreadcrumbSeparator"
            role="presentation"
          >
            /
          </span>
        </li>
        <li
          class="css-juzgwo"
          data-chakra-component="CBreadcrumbItem"
        >
          <a
            class="css-fzcsno css-1v8ez2b"
            data-chakra-component="CBreadcrumbLink"
            href="#"
          >
            Breadcrumb 2
          </a>
          <span
            class="css-11al2zw"
            data-chakra-component="CBreadcrumbSeparator"
            role="presentation"
          >
            /
          </span>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
